--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
 }
 .clap:hover {
   cursor: pointer;
-  border: 1px solid #27ae60;
+  border: 1px solid #42e2e5;
   transition: border-color 0.3s ease-in;
 }
 .clap:hover:after {
@@ -54,11 +54,11 @@ body {
 .clap svg {
   width: 40px;
   fill: none;
-  stroke: #27ae60;
+  stroke: #42e2e5;
   stroke-width: 2px;
 }
 .clap svg.checked {
-  fill: #27ae60;
+  fill: #42e2e5;
   stroke: #fff;
   stroke-width: 1px;
 }
@@ -68,7 +68,7 @@ body {
   left: 20px;
   font-size: 0.8rem;
   color: white;
-  background: #27ae60;
+  background: #42e2e5;
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -90,10 +90,10 @@ body {
 #message {
   position: absolute;
   bottom: 20px;
-  color: #27ae60;
+  color: #42e2e5;
   line-height: 1.52rem;
   padding: 1rem;
-  font-size: 0.9rem;
+  font-size: 1.0rem;
 }
 #message a {
   color: #bdc3c7;
@@ -114,33 +114,44 @@ body {
 </style></head><body>
 <button id="clap" class="clap" style="transform: translate(0px, 0px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);">
   <span>
-    <!--  SVG Created by Luis Durazo from the Noun Project  -->
+    <!--  SVG Created by Luis Durazo from the Noun Project  
+    
     <svg id="clap--icon" xmlns="http://www.w3.org/2000/svg" viewBox="-549 338 100.1 125" class="checked">
+    -->
+     <svg id="clap--icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 10" class="checked">
+
+      <img src="tooth.svg" alt="image" width = '76%' hieght = '76%' >
+
+<!--
   <path d="M-471.2 366.8c1.2 1.1 1.9 2.6 2.3 4.1.4-.3.8-.5 1.2-.7 1-1.9.7-4.3-1-5.9-2-1.9-5.2-1.9-7.2.1l-.2.2c1.8.1 3.6.9 4.9 2.2zm-28.8 14c.4.9.7 1.9.8 3.1l16.5-16.9c.6-.6 1.4-1.1 2.1-1.5 1-1.9.7-4.4-.9-6-2-1.9-5.2-1.9-7.2.1l-15.5 15.9c2.3 2.2 3.1 3 4.2 5.3zm-38.9 39.7c-.1-8.9 3.2-17.2 9.4-23.6l18.6-19c.7-2 .5-4.1-.1-5.3-.8-1.8-1.3-2.3-3.6-4.5l-20.9 21.4c-10.6 10.8-11.2 27.6-2.3 39.3-.6-2.6-1-5.4-1.1-8.3z"></path>
   <path d="M-527.2 399.1l20.9-21.4c2.2 2.2 2.7 2.6 3.5 4.5.8 1.8 1 5.4-1.6 8l-11.8 12.2c-.5.5-.4 1.2 0 1.7.5.5 1.2.5 1.7 0l34-35c1.9-2 5.2-2.1 7.2-.1 2 1.9 2 5.2.1 7.2l-24.7 25.3c-.5.5-.4 1.2 0 1.7.5.5 1.2.5 1.7 0l28.5-29.3c2-2 5.2-2 7.1-.1 2 1.9 2 5.1.1 7.1l-28.5 29.3c-.5.5-.4 1.2 0 1.7.5.5 1.2.4 1.7 0l24.7-25.3c1.9-2 5.1-2.1 7.1-.1 2 1.9 2 5.2.1 7.2l-24.7 25.3c-.5.5-.4 1.2 0 1.7.5.5 1.2.5 1.7 0l14.6-15c2-2 5.2-2 7.2-.1 2 2 2.1 5.2.1 7.2l-27.6 28.4c-11.6 11.9-30.6 12.2-42.5.6-12-11.7-12.2-30.8-.6-42.7m18.1-48.4l-.7 4.9-2.2-4.4m7.6.9l-3.7 3.4 1.2-4.8m5.5 4.7l-4.8 1.6 3.1-3.9"></path>
+-->
+
 </svg>
   </span>
-  <span id="clap--count" class="clap--count" style="opacity: 0; transform: translate(0px, -80px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);">+4</span>
-  <span id="clap--count-total" class="clap--count-total" style="opacity: 1; transform: translate(0px, -3px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);">9138</span>
+  <span id="clap--count" class="clap--count" style="opacity: 0; transform: translate(0px, -80px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);">+3</span>
+  <span id="clap--count-total" class="clap--count-total" style="opacity: 1; transform: translate(0px, -3px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);">1</span>
 <div data-name="mojs-shape" class="" style="position: absolute; width: 0px; height: 0px; margin-left: 0px; margin-top: 0px; opacity: 1; left: 50%; top: 50%; transform: translate(0px, 0px) rotate(30deg) scale(1, 1); transform-origin: 50% 50% 0px;"><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(1e-06px, -95px) rotate(300deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(90.3504px, -29.3566px) rotate(372deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(55.8396px, 76.8566px) rotate(444deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(-55.8396px, 76.8566px) rotate(516deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(-90.3504px, -29.3566px) rotate(588deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div></div><div data-name="mojs-shape" class="" style="position: absolute; width: 0px; height: 0px; margin-left: 0px; margin-top: 0px; opacity: 1; left: 50%; top: 50%; transform: translate(0px, 0px) rotate(25deg) scale(1, 1); transform-origin: 50% 50% 0px;"><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(1e-06px, -75px) rotate(90deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(71.3292px, -23.1763px) rotate(162deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(44.0839px, 60.6763px) rotate(234deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(-44.0839px, 60.6763px) rotate(306deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(-71.3292px, -23.1763px) rotate(378deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div></div></button>
 
-<aside id="message">In case you didn't know, you gotta click the clap button above 😎😜😜 
+<aside id="message">Welcome to Gingivo! 
   <br>
-  👉🏻 Press down the button for some more fun!
+  Click the tooth button to show how much you love your hygienist!
   <br>
   
-  <a href="https://twitter.com/OhansEmmanuel" target="_blank">via @ohansemmanuel</a>
+  <a href="https://google.com" target="_blank">cs@gingivo.com</a>
   <br>
-  <a href="https://codepen.io/ohansemmanuel/full/zEJpYy/" target="_blank">
-    See ReactJS implementation
+  <a href="http:s//google.com" target="_blank">
+    Gingivo homepage
   </a>  
+  <br>
+
 </aside>
 <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mo-js/0.288.1/mo.min.js"></script><div></div>
 <script>var clap = document.getElementById('clap');
 var clapIcon = document.getElementById('clap--icon');
 var clapCount = document.getElementById('clap--count');
 var clapTotalCount = document.getElementById('clap--count-total');
-var initialNumberOfClaps = generateRandomNumber(500, 10000);
+var initialNumberOfClaps = 1;
 var btnDimension = 80;
 var tlDuration = 300;
 var numberOfClaps = 0;
@@ -155,7 +166,7 @@ var triangleBurst = new mojs.Burst({
     shape: 'polygon',
     radius: { 6: 0 },
     scale: 1,
-    stroke: 'rgba(211,84,0 ,0.5)',
+    stroke: 'rgba(35,240,255 ,0.5)',
     strokeWidth: 2,
     angle: 210,
     delay: 30,
