--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
 }
 .clap:hover {
   cursor: pointer;
-  border: 1px solid #42e2e5;
+  border: 1px solid #27ae60;
   transition: border-color 0.3s ease-in;
 }
 .clap:hover:after {
@@ -54,11 +54,11 @@ body {
 .clap svg {
   width: 40px;
   fill: none;
-  stroke: #42e2e5;
+  stroke: #27ae60;
   stroke-width: 2px;
 }
 .clap svg.checked {
-  fill: #42e2e5;
+  fill: #27ae60;
   stroke: #fff;
   stroke-width: 1px;
 }
@@ -68,7 +68,7 @@ body {
   left: 20px;
   font-size: 0.8rem;
   color: white;
-  background: #42e2e5;
+  background: #27ae60;
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -90,10 +90,10 @@ body {
 #message {
   position: absolute;
   bottom: 20px;
-  color: #42e2e5;
+  color: #27ae60;
   line-height: 1.52rem;
   padding: 1rem;
-  font-size: 1.0rem;
+  font-size: 0.9rem;
 }
 #message a {
   color: #bdc3c7;
@@ -120,7 +120,7 @@ body {
     -->
      <svg id="clap--icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 10" class="checked">
 
-      <img src="tooth.svg" alt="image" width = '76%' hieght = '76%' >
+      <img src="pikachu.svg" alt="image" width = '76%' hieght = '76%' >
 
 <!--
   <path d="M-471.2 366.8c1.2 1.1 1.9 2.6 2.3 4.1.4-.3.8-.5 1.2-.7 1-1.9.7-4.3-1-5.9-2-1.9-5.2-1.9-7.2.1l-.2.2c1.8.1 3.6.9 4.9 2.2zm-28.8 14c.4.9.7 1.9.8 3.1l16.5-16.9c.6-.6 1.4-1.1 2.1-1.5 1-1.9.7-4.4-.9-6-2-1.9-5.2-1.9-7.2.1l-15.5 15.9c2.3 2.2 3.1 3 4.2 5.3zm-38.9 39.7c-.1-8.9 3.2-17.2 9.4-23.6l18.6-19c.7-2 .5-4.1-.1-5.3-.8-1.8-1.3-2.3-3.6-4.5l-20.9 21.4c-10.6 10.8-11.2 27.6-2.3 39.3-.6-2.6-1-5.4-1.1-8.3z"></path>
@@ -133,18 +133,12 @@ body {
   <span id="clap--count-total" class="clap--count-total" style="opacity: 1; transform: translate(0px, -3px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);">1</span>
 <div data-name="mojs-shape" class="" style="position: absolute; width: 0px; height: 0px; margin-left: 0px; margin-top: 0px; opacity: 1; left: 50%; top: 50%; transform: translate(0px, 0px) rotate(30deg) scale(1, 1); transform-origin: 50% 50% 0px;"><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(1e-06px, -95px) rotate(300deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(90.3504px, -29.3566px) rotate(372deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(55.8396px, 76.8566px) rotate(444deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(-55.8396px, 76.8566px) rotate(516deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 14px; height: 14px; margin-left: -7px; margin-top: -7px; opacity: 1; left: 50%; top: 50%; transform: translate(-90.3504px, -29.3566px) rotate(588deg) scale(1, 1); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><path d="M7.0000,7.0000 L7.0000,7.0000 L7.0000,7.0000 z" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="deeppink" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="rgba(211,84,0 ,0.5)"></path></svg></div></div><div data-name="mojs-shape" class="" style="position: absolute; width: 0px; height: 0px; margin-left: 0px; margin-top: 0px; opacity: 1; left: 50%; top: 50%; transform: translate(0px, 0px) rotate(25deg) scale(1, 1); transform-origin: 50% 50% 0px;"><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(1e-06px, -75px) rotate(90deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(71.3292px, -23.1763px) rotate(162deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(44.0839px, 60.6763px) rotate(234deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(-44.0839px, 60.6763px) rotate(306deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div><div data-name="mojs-shape" class="" style="position: absolute; width: 8px; height: 8px; margin-left: -4px; margin-top: -4px; opacity: 1; left: 50%; top: 50%; transform: translate(-71.3292px, -23.1763px) rotate(378deg) scale(0, 0); transform-origin: 50% 50% 0px;"><svg style="display: block; width: 100%; height: 100%; left: 0px; top: 0px;"><ellipse rx="0" ry="0" cx="4" cy="4" fill-opacity="1" stroke-linecap="" stroke-dashoffset="" fill="rgba(149,165,166 ,0.5)" stroke-dasharray="" stroke-opacity="1" stroke-width="2" stroke="transparent"></ellipse></svg></div></div></button>
 
-<aside id="message">Welcome to Gingivo! 
+<aside id="message">I love you my baby 😎😜😜 
   <br>
-  Click the tooth button to show how much you love your hygienist!
+  👉Full time trader!!!!
   <br>
   
-  <a href="https://google.com" target="_blank">cs@gingivo.com</a>
-  <br>
-  <a href="http:s//google.com" target="_blank">
-    Gingivo homepage
-  </a>  
-  <br>
-
+  
 </aside>
 <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mo-js/0.288.1/mo.min.js"></script><div></div>
 <script>var clap = document.getElementById('clap');
